Dockerise web and service